src/FinancialForce Accounting/objects/codaItem__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data</label>
        <referenceTo>codaDataProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <referenceTo>codaFormatData__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITName__c</fullName>
        <label>ITName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemSequence__c</fullName>
        <label>ItemSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>ItemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_printformat_item_type_section</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_database</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_image</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_text</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_line_horizontal</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_line_vertical</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_table</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_agregate_table</fullName>
                </value>
                <value>
                    <fullName>com_printformat_item_type_pagenum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageNum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageNum</label>
        <referenceTo>codaPageNumProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>codaSection__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Table</label>
        <referenceTo>codaTableProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseFormat__c</fullName>
        <label>UseFormat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_printformat_inherit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisibleBetween__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleBetween</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleLast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleLast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleOnePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleOnePage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>